# WWW16-UEFI

./: README.md
zad1/: zad1.efi
zad3/: CMakeLists.txt  README.md
zad3/src/: main.cc
